Fixed navbar background blending issue on mobile.

--- a/app/assets/stylesheets/theme-worthy/style.css.scss
+++ b/app/assets/stylesheets/theme-worthy/style.css.scss
@@ -500,6 +500,10 @@ textarea {
 	background-color: transparent;
 	color: #55acee;
 }
+.main-navigation .navbar-collapse[aria-expanded="true"] {
+    background-color: #333333;
+}
+
 .main-navigation .navbar-default .navbar-nav > li > a:hover,
 .main-navigation .navbar-default .navbar-nav > li.active > a:hover {
 	color: #55acee;
